The Landing Page group Project

--- a/index.html
+++ b/index.html
@@ -6,43 +6,74 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Landing-Page</title>
     <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
+    />
   </head>
   <body>
     <main class="Main">
-  
-    
-      <div> 
-         <div class="row" id="toprow">
-      <a href="google.com">home</a>
-      <a href="google.com">Jobs</a>
-      <a href="google.com">Catagories</a>
-      <a href="google.com">Resource</a>
-      <a href="google.com">Sign up</a>
-    </div>
+      <div>
+        <div class="row" style="color: gray" id="toprow">
+          <a href="google.com" target="_blank">home</a>
+          <a href="https://www.linkedin.com/" target="_blank">Jobs</a>
+          <a href="https://www.google.com/" target="_blank">Catagories</a>
+          <a href="google.com" target="_blank">Resource</a>
+          <a href="google.com" target="_blank">Sign up</a>
+        </div>
         <h1>Find Best Blockchain</h1>
-        <h1 id="hdeveloper">Developers</h1>
+        <h1>Developers</h1>
         <h6>
-          finding Job shouldbe a full time endavor tell us whta youre search for
+          Finding Job should be a full time endavor tell us what your search for
           and we'll find you job
         </h6>
         <button class="b1"><h5>Counsulting & Acvisement</h5></button>
         <button class="b2"><h5>Search for Freelancers</h5></button>
-      </div>
-      <div>
-        <h6>Find global & multilingual talent</h6>
-        <p>
-          finding Job shouldbe a full time endavor tell us whta youre search
-        </p>
-      </div>
-      <div class="container-fluid">
-        <div class="row" style= justify-content:center;>
-          <img src="https://media.gettyimages.com/photos/bearded-businessman-against-gray-background-picture-id1179627332?s=612x612" alt=""> 
-          <img src="https://media.gettyimages.com/photos/bearded-businessman-against-gray-background-picture-id1179627332?s=612x612" alt="">
-          <img src="https://media.gettyimages.com/photos/bearded-businessman-against-gray-background-picture-id1179627332?s=612x612" alt="Rasta">
-          <img src="https://media.gettyimages.com/photos/bearded-businessman-against-gray-background-picture-id1179627332?s=612x612" alt="Mike">
+        <div>
+          <h6>Find global & Multilingual talent</h6>
+          <p>
+            Finding Job should be a full time endavor tell us what your search
+          </p>
         </div>
       </div>
+      <div class="container"></div>
+      <!-- image cards-->
+      <div class="container-fluid" style="width: 80%">
+        <div class="row">
+          <div class="col">
+            <img
+              class="card-img-top"
+              src="./img/Memories 022.JPG"
+              alt="Card image"
+            />
+            <input-type>Solomon</input-type>
+            <div class="card-body">
+              <a href="#" class="btn btn-info">See Profile</a>
+            </div>
+          </div>
+          <div class="col">
+            <img
+              class="card-img-top"
+              src="https://www.w3schools.com/bootstrap4/img_avatar1.png"
+              alt="Card image"
+            />
+            <input-type>Your Name Here</input-type>
+            <div class="card-body">
+              <a href="#" class="btn btn-info">See Profile</a>
+            </div>
+          </div>
+          <div class="col">
+            <img
+              class="card-img-top"
+              src="https://www.w3schools.com/bootstrap4/img_avatar1.png"
+              alt="Card image"
+            />
+            <input-type>Your Name Here</input-type>
+            <div class="card-body">
+              <a href="#" class="btn btn-info">See Profile</a>
+            </div>
+          </div>
+        </div>
       </div>
     </main>
   </body>
